Fixed map resize issue (was happening too soon so on mobile the doc width was wrong)

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -21,9 +21,16 @@
     }
 }
 
+@media (max-width: 640px) {
+    .banner-message {
+        font-size: 12px;
+    }
+}
+
 .banner-message a {
     margin: 0;
     color: white;
+    line-height: 11px;
 }
 
 .banner-message a:hover {
