--- a/src/client/css/_flex.slider.less
+++ b/src/client/css/_flex.slider.less
@@ -1,5 +1,6 @@
 .flexslider {
     margin: 0 0 20px;
+    min-height: 208px;
 }
 
 .flexslider .slides img:hover {
