--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -153,9 +153,12 @@
 }
 
 .nav-menu-standard .contact-nav a.contact-email {
-    font-size: 16px;
-    line-height: 19px;
-    padding-left: 4px;
+    font-size: 17px;
+    padding-left: 5px;
+}
+
+.nav-menu-standard .contact-nav a.contact-facebook:hover {
+    background-color: rgb(126, 167, 253);
 }
 
 // DROP DOWN MENU -------------------------------------
